--- a/src/pages/author/[slug].astro
+++ b/src/pages/author/[slug].astro
@@ -27,7 +27,7 @@ const sortedPosts = authorPosts.sort((a, b) => b.data.published_at.valueOf() - a
 ---
 
 <BaseLayout
-  title={`${author.data.name} | AI Chat Watch`}
+  title={`${author.data.name} | AICW`}
   description={author.data.bio}
   image={author.data.avatar}
   imageAlt={author.data.name}
