--- a/src/pages/books/[book]/index.astro
+++ b/src/pages/books/[book]/index.astro
@@ -38,7 +38,7 @@ const firstChapterSlug = firstChapter?.slug.split('/').pop();
 ---
 
 <BaseLayout
-  title={`${title} | AI Chat Watch`}
+  title={`${title} | AICW`}
   description={description}
   canonical={`/books/${book.slug}/`}
   image={coverImage}
